# authpractice

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: audit.yaml  general.yaml
.sqlx/: query-1336a40a682ab12ef3c948300a8ebcf36ca3bc296a29eb12049acdb53a47a2dd.json  query-150ffb6cb4ca28ddbcf2a80d432c9f45d4d22f157f04de3795a74336673647a2.json  query-3520c4e96edf7e47e82602a822194c885d80322b13bab83e03ec895b66a97111.json  query-7b233842f41011d54fc39d20742bfa5417dff4c4c3cd90a2a0cbfa71d6100eb4.json  query-a6a1deaee2df9b927d4f0d7d871a51d58af50ae4c3b6d3520755dac38b1080f8.json  query-b4ac299332d5aaa2895ac65812c7e91ac9ce5b2245da36df6ef2683d6b6682cb.json  query-c130119f583190f0f504fc3673d49b7b0bf7e69f76e30c8daaa0e64495f2b439.json  query-ee8e8b224240d87c990642527e5ea1fe82d358e6a2c35f631cc7d97e189148b7.json
configuration/: base.yaml  production.yaml
design/: sequence.md
load_tests/: .gitignore  .npmrc  package.json  pnpm-workspace.yaml  tsconfig.json
load_tests/benchmarks/: login_scenario_tests_summary.json  signup_scenario_66vu_peak_summary.json  signup_scenario_tests_summary.json  signup_stress_90vu_break.json  update_profile_scenario_tests_summary.json
load_tests/config/: environment.ts  profiles.ts
load_tests/modules/: payload.ts
load_tests/modules/endpoints/: auth.ts  health.ts  user.ts
load_tests/scenarios/: login_stress.ts  signup_stress.ts  update_profile_stress.ts
migrations/: 20260423032741_create_users_table.sql  20260611113400_update_user_table_shape.sql  20260611133530_update_user_name_field.sql  20260615100738_include_account_creation_timestamp.sql  20260616060611_update_signed_up_at_type.sql  20260722000253_add_deleted_at_to_users.sql
monitoring/: loki-config.yaml  prometheus.yaml
monitoring/promtail/: config.yaml
monitoring/wiremock/mappings/: hibp_mock.json
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  end_points.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/data/: mod.rs  user_entity.rs
src/domain/: middleware.rs  mod.rs  new_user.rs  password.rs  user.rs  user_email.rs  user_name.rs
src/routes/: auth.rs  login.rs  mod.rs  profiles.rs  users.rs
tests/: health_check.rs
tests/api/: auth_api.rs  health_check.rs  helpers.rs  main.rs
