[package]
name = "authpractice"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.7.0"
config = "0.15.19"
uuid = { version = "1.20.0", features = ["v4"] }
secrecy = { version = "0.8", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.21"
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "rustls",
] }
chrono = "0.4.43"
# validator = { version = "0.19", features = ["derive", "email"] }
claim = "0.5.0"
unicode-segmentation = "1.12.0"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]


[dev-dependencies]
once_cell = "1.21.3"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
