[package]
name = "authpractice"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
] }
actix-web = "4"
actix-session = { version = "0.10", features = ["redis-session-rustls"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1"
config = "0.15.19"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
secrecy = { version = "0.8", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.21"
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "rustls",
    "cookies",
] }
chrono = { version = "0.4.43", features = ["serde"] }
unicode-segmentation = "1.12.0"
base64 = "0.13"
argon2 = { version = "0.5.3", features = ["std"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
sha1 = "0.11.0"
rand = { version = "0.8", features = ["std_rng"] }
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
time = ">= 0.3, < 0.3.48"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]


[dev-dependencies]
fake = "5.1.0"
once_cell = "1.21.3"
redis = { version = "1.3.0", features = ["tokio-comp"] }
wiremock = "0.6.5"
